src/test/ui/type-alias-impl-trait/impl-with-unconstrained-param.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/impl-with-unconstrained-param.rs:6:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-with-unconstrained-param.rs:14:6
   |
LL | impl<T> X for () {
   |      ^ unconstrained type parameter

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0207`.
